# qwen3-vl

./: .env.template  .gitignore  README.md  pyproject.toml
scripts/: train.sh
src/: inference.py  jsonl_to_hf.py  train.py  train_copy.py  train_multi_gpu.py
